--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/icons?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>ROCHA FOTOGRAFIA</h1>
-        
-        <menu>
-            <span class="material-icons" id="buger" onclick="clickMenu()">menu</span>
+        <i class="material-icons" id="burger" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">JOBS =)</a></li>
@@ -80,5 +79,24 @@
             </div>
         </section>
     </footer>
+    
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            }
+            else {
+                itens.style.display = 'none'
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            }
+
+            else itens.style.display = 'block'
+        }
+    </script>
 </body>
 </html>
