update nas imagens e rodapé

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="logos/favicon-preto.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
-        <h1>ROCHA FOTOGRAFIA</h1>
+        <img src="logos/logo-branco.png" alt="">
         <i class="material-icons" id="burger" onclick="clickMenu()">menu</i>
         <menu id="itens">
             <ul>
@@ -56,31 +57,27 @@
             <a href="">MAIS DEPOIMENTOS ;)</a>
         </section>
     </main>
+
     <footer>
         <section>
             <div id="rodape">
-                <h1>SOBRE NÓS</h1>
-                <h1>NOS FAÇA UMA VISITA</h1>
-                <h1>CONTATO</h1>
+                <h1 id="nosdois">SOBRE NÓS</h1>
+                <h1 id="contatos">CONTATO</h1>
             </div>
 
             <div id="sobreNos">
                 <img src="" alt="">
                 <p>Esses aí da foto somos nós, Kelen e Léo,casados, com mais de 6 anos de histórias, apaixonados um pelo outro e os dois pela fotografia. Nós acreditamos que fotografar é a arte de contar histórias, é poder eternizar a emoção sentida em um dos dias mais especiais...</p>                
             </div>
-
-            <div id="mapa">
-                <iframe src="" frameborder="0">LOCALIZAÇÃO</iframe>
-            </div>
-
-            <div id="CONTATO">
+            
+            <div id="contato">
                 <p>+55 (44) 99897-0605</p>
-                <a href=""><img src="logos/whats-icon.png" alt="" id="imgWhats">Enviar mensagem</a>
+                <a href=""><img src="logos/icon-whats-branco.png" alt="" id="imgWhats" class="social">Enviar mensagem</a>
                 <p>keleenrocha@gmail.com</p>
                 <p>Rua Waldemar dos Santos, 984 - Centro, Querência do Norte-PR</p>
-                <a href="https://www.instagram.com/estudio.rochaa/"><img src="logos/instagram-icon.png" alt=""></a>
-                <a href="https://www.facebook.com/rochafotografiaa/"><img src="logos/facebook-icon.png" alt=""></a>
-                <a href="https://br.pinterest.com/rochafotografiaa/"><img src="logos/pinterest-icon.png" alt=""></a>
+                <a href="https://www.instagram.com/estudio.rochaa/"><img src="logos/icon-insta-branco.png" alt="" class="social"></a>
+                <a href="https://www.facebook.com/rochafotografiaa/"><img src="logos/icon-facebook-branco.png" alt="" class="social"></a>
+                <a href="https://br.pinterest.com/rochafotografiaa/"><img src="logos/icon-pinterest-branco.png" alt="" class="social"></a>
             </div>
         </section>
     </footer>
